--- a/style.css
+++ b/style.css
@@ -1,4 +1,43 @@
-*{
-    font-family: 'Poppins', sans-serif;
+* {
+ font-family: 'Poppins', sans-serif;
+}
 
+h1 {
+  text-align: center;
+  font-size: 40px;
+  padding: 10px;
+  margin: 20px;
+  border: solid 5px gray;
+}
+body {
+    height: 100vh;
+    margin: 25px;
+    background-image: url(https://images.pexels.com/photos/209831/pexels-photo-209831.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 100%;
+}
+
+
+
+.button {
+    background-color: #008cba;
+    height: 10%;
+    width: 10%ß;
+    border-radius: 8px;
+    color: aliceblue;
+    padding: 5px 15px;
+    margin-top: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,2);
+    cursor:pointer;
+}
+
+.button:hover{
+    background-color: #555555;
+    color:aliceblue;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);
 }
