--- a/style.css
+++ b/style.css
@@ -2,13 +2,6 @@
  font-family: 'Poppins', sans-serif;
 }
 
-h1 {
-  text-align: center;
-  font-size: 40px;
-  padding: 10px;
-  margin: 20px;
-  border: solid 5px gray;
-}
 body {
     height: 100vh;
     margin: 25px;
@@ -18,12 +11,25 @@ body {
     font-size: 100%;
 }
 
+h1 {
+  text-align: center;
+  font-size: 40px;
+  padding: 10px;
+  margin: 20px;
+}
 
+.search-bar {
+  padding: 15px 25px;
+  box-shadow: 0 8px 16px 0 aliceblue;
+  text-decoration: none;
+  border-radius: 8px;
+  font-size: 18px;
+}
 
 .button {
     background-color: #008cba;
     height: 10%;
-    width: 10%ß;
+    width: 15%;
     border-radius: 8px;
     color: aliceblue;
     padding: 5px 15px;
@@ -40,4 +46,14 @@ body {
     background-color: #555555;
     color:aliceblue;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);
+    transition: .4s ease-in;
+}
+
+.container {
+  display: grid; 
+   grid-template-rows: 1fr;
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+   gap: 0px;
+   height: 100%;
+
 }
