--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@ h1 {
   font-size: 40px;
   padding: 10px;
   margin: 20px;
+  color: aliceblue;
 }
 
-.search-bar {
+input.search-bar {
+  border: none;
+  outline: none;
   padding: 15px 25px;
   box-shadow: 0 8px 16px 0 aliceblue;
   text-decoration: none;
@@ -49,11 +52,18 @@ h1 {
     transition: .4s ease-in;
 }
 
-.container {
-  display: grid; 
-   grid-template-rows: 1fr;
-   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-   gap: 0px;
-   height: 100%;
-
+.header-card{
+  background: rgba(178, 176, 177, 0.7);
+  border-radius: 30px;
+  width: auto;
+}
+.card{
+  background: rgba(178, 176, 177, 0.5);
+  font-weight: bold;
+  color: white;
+  padding: 2em;
+  border-radius: 30px;
+  width: 100%;
+  max-width: 420px;
+  margin: 1em;
 }
