--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
  font-family: 'Poppins', sans-serif;
+ color: black;  
 }
 
 body {
@@ -16,7 +17,6 @@ h1 {
   font-size: 40px;
   padding: 10px;
   margin: 20px;
-  color: aliceblue;
 }
 
 h3 {
@@ -34,7 +34,7 @@ input.search-bar {
   font-size: 18px;
 }
 
-.button {
+#search-btn {
     background-color: #008cba;
     height: 10%;
     width: 15%;
@@ -48,54 +48,57 @@ input.search-bar {
     font-size: 16px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,2);
     cursor:pointer;
-}
-
-.button:hover{
+  }
+  
+  .button:hover{
     background-color: #555555;
     color:aliceblue;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24);
     transition: .4s ease-in;
+  }
+  
+  .header-card{
+    background: rgba(178, 176, 177, 0.7);
+    border-radius: 30px;
+    width: auto;
+  }
+  
+  .row{
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .column {
+    background-color: rgba(178, 176, 177, 0.5);;
+    padding: 1rem 0;
+    flex: 1;
+    border-radius: 30px;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .container-current {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .container.forecast {
+  max-width: 1200px;
+  margin: 0 auto;
+  }
+
+@media only screen and (max-width: 767px) {
+  .row{
+    flex-wrap: wrap;
+  }
+  .column{
+    flex-basis: 100%;
+  }
+
+  .button{
+    flex-basis: 100%;
+  }
 }
 
-.header-card{
-  background: rgba(178, 176, 177, 0.7);
-  border-radius: 30px;
-  width: auto;
-}
-.card.current-weather-info{
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  background: rgba(178, 176, 177, 0.5);
-  font-weight: bold;
-  color: white;
-  padding: 5px;
-  border-radius: 30px;
-  width: 100%;
-  margin-top: -126px;
-  margin-right: 10px;
-  margin-left: 10px;
-  align-items: flex-start;
-}
-
-.card.upcoming-weather-info{
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  background: rgba(178, 176, 177, 0.5);
-  font-weight: bold;
-  color: white;
-  padding: 5px;
-  border-radius: 30px;
-  width: 100%;
-  margin-top: -126px;
-  margin-right: 10px;
-  margin-left: 10px;
-  align-items: flex-start;
-}
-
-.current-weather-info {
-  display: flex;
-  flex-direction: row-reverse;
-}
 
