--- a/style.css
+++ b/style.css
@@ -37,14 +37,13 @@ input.search-bar {
 #search-btn {
     background-color: #008cba;
     height: 10%;
-    width: 15%;
+    width: 25%;
     border-radius: 8px;
     color: aliceblue;
     padding: 5px 15px;
     margin-top: 10px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,2);
     cursor:pointer;
@@ -96,7 +95,7 @@ input.search-bar {
     flex-basis: 100%;
   }
 
-  .button{
+  .header-card{
     flex-basis: 100%;
   }
 }
