--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100%;
     margin: 25px;
     background-image: url(https://images.pexels.com/photos/209831/pexels-photo-209831.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     background-repeat: no-repeat;
@@ -13,6 +13,13 @@ body {
 }
 
 h1 {
+  text-align: center;
+  font-size: 40px;
+  padding: 10px;
+  margin: 20px;
+}
+
+h2 {
   text-align: center;
   font-size: 40px;
   padding: 10px;
@@ -57,6 +64,12 @@ input.search-bar {
   }
   
   .header-card{
+    background: rgba(178, 176, 177, 0.7);
+    border-radius: 30px;
+    width: auto;
+  }
+
+    .forecast-header{
     background: rgba(178, 176, 177, 0.7);
     border-radius: 30px;
     width: auto;
