--- a/assets/style.css
+++ b/assets/style.css
@@ -100,6 +100,13 @@ input.search-bar {
   margin: 0 auto;
   }
 
+  .current-icon {
+    height: 150px;
+    width: 150px;
+  }
+
+  
+
 @media only screen and (max-width: 767px) {
   .row{
     flex-wrap: wrap;
